log
Wed Mar 25 03:14:13 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
0f85a63
Wed Mar 25 03:37:45 AM UTC 2026: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
e8b8a66
Fri Mar 27 01:52:44 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
776d732
